# social-rs

./: .env  .gitignore  Cargo.toml  rustfmt.toml
front/: cli.ts  codegen.yaml  package-lock.json  package.json  tsconfig.json
front/app/: app.tsx  index.tsx  style.less  tsconfig.json
front/app/components/basic/: Button.tsx  InputText.tsx  Tabs.tsx  index.ts
front/app/components/functional/: Chat.tsx  ChatInput.tsx  ChatMessages.tsx  Chats.tsx  Header.tsx  ItemChat.tsx  ItemChatMessage.tsx  ItemUser.tsx  Login.tsx  Register.tsx  index.ts
front/app/components/pages/: MainRoutes.ts  PageAdmin.tsx  PageChat.tsx  PageChats.tsx  PageLogin.tsx  PageMain.tsx  PageSearchUser.tsx  PageSettings.tsx  PageUser.tsx  index.ts
front/app/controllers/: ControllerChats.ts  ControllerContacts.ts  index.ts
front/app/graphQL/: generated_sdk.ts  queries.ts
front/app/serverData/: WsSdk.ts  chats.ts  index.ts  sdk.ts  session.ts
front/app/store/: DataStore.ts  defaultData.ts  index.ts  useStore.ts
front/lib/: array.ts  math.ts  path.ts
front/webpack_cli/: config.ts  index.ts
graphql/: schema.gql
graphql-actix-web-lib/: Cargo.toml
scripts/: dev.sh
src/: db.rs  error.rs  graphql.rs  main.rs  routes.rs
src/controllers/: chat.rs  mod.rs  user.rs
src/db/: connect.rs  mod.rs  utils.rs  validations.rs
src/db/models/: chat.rs  user.rs
src/db/utils/: connect.rs  mod.rs  utils.rs
src/graphql/: context.rs  mod.rs  routes.rs  simple_broker.rs  utils.rs
src/graphql/schema/: mod.rs  mutation.rs  query.rs  subscription.rs
src/graphql/schema/query/: chat.rs  mod.rs  session.rs
src/graphql/schema/subscription/: mod.rs
src/session/: README.MD  middleware.rs  mod.rs  session.rs  session_ext.rs
