[package]
name = "social"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = {version = "4.0.1", features = ["macros"]}
actix-utils = "3"
# actix-session = "0.6.2"

redis = { version = "0.21", features = ["tokio-comp"] }
mongodb = "2.2.1"

env_logger = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
num_cpus = "1.13.1"
deadpool = "0.9.5"
async-graphql = {version = "4.0.1", default-features = false }
# async-graphql-actix-web = {version = "4.0.1", default-features = false }
futures-util = "0.3.0"
derive_more = "0.99.17"
graphql-actix-web-lib = {path = "./lib/graphql-actix-web-lib"}
async-stream = "0.3.0"
futures-timer = "3.0.2"
async-lock = "2.5.0"
anyhow = "1"
time = "0.3"

[workspace]
members = [
    "lib/graphql-actix-web-lib"
]
